--- a/src/components/Form/styles.module.scss
+++ b/src/components/Form/styles.module.scss
@@ -16,44 +16,70 @@
   .inputs {
     display: flex;
     margin: 0;
+    transition-duration: 0.4s;
+    overflow: hidden;
+    height: auto;
 
-.input {
-  flex: 1;
-}
-
-
-      .hidden {
-        display: none;
-      }
-
-      .submit {
-        flex: 0;
-      }
-
+    &.hasError {
       input {
-        width: 100%;
-        margin: 0;
-        font-size: 1.4rem;
-        border-radius: 5px 0 0 5px;
+        border-radius: 5px 0 0 0;
+        border-bottom: none;
 
         &[type=submit] {
-          border: 1px solid rgba(0,0,0,.3) !important;
-          border-radius: 0 5px 5px 0;
-          height: 39px;
-          padding: 0 10px;
-          border-left: none !important;
-
-          &:disabled {
-            background: rgba(0, 0, 0, 0.1);
-          }
+          border-radius: 0 5px 0 0;
         }
       }
+    }
+
+    &.hasSuccess {
+      height: 0;
+    }
+
+    .input {
+      flex: 1;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    .submit {
+      flex: 0;
+    }
+
+    input {
+      width: 100%;
+      margin: 0;
+      font-size: 2.0rem;
+      border-radius: 5px 0 0 5px;
+
+      &[type=submit] {
+        border: 1px solid rgba(0, 0, 0, 0.3) !important;
+        border-radius: 0 5px 5px 0;
+        font-size: inherit;
+        height: 100%;
+
+        // height: 39px;
+        padding: 0 10px;
+        border-left: none !important;
+
+        &:disabled {
+          background: rgba(0, 0, 0, 0.1);
+        }
+      }
+    }
   }
 
   &.compact {
     .inputs {
       border: 1px solid rgba(0, 0, 0, 0.3);
       border-radius: 4px;
+
+&.hasSuccess {
+  height: 0;
+  border: none;
+}
+
 
       input {
         width: 100%;
@@ -103,7 +129,7 @@
       color: white;
       transition-duration: 0.2s;
       background-color: $LIGHT_BLUE;
-      border: 2px solid white;
+      border: 1px solid white;
       font-size: 15px;
       width: 140px;
       cursor: pointer;
@@ -114,10 +140,27 @@
 
       &:disabled {
         color: $LIGHT_GRAY;
-        border: 2px solid $LIGHT_GRAY;
+        border: 1px solid $LIGHT_GRAY;
         background-color: white;
         cursor: default;
       }
     }
   }
+
+  p.error {
+    background: rgba(255, 50, 50, 0.7);
+    border-radius: 0 0 4px 4px;
+    color: white;
+    padding: 5px 10px;
+  }
+
+  p.success {
+    color: rgba(9, 133, 9, 0.8) !important;
+    text-align: center;
+    font-size: 2rem;
+
+    // padding: 5px 10px;
+ 
+  }
 }
+
