--- a/src/components/SubscribeForm/styles.module.scss
+++ b/src/components/SubscribeForm/styles.module.scss
@@ -1,50 +1,23 @@
 @import "~styles/constants";
 
-.formContainer {
-  transition-duration: 2s;
-  position: relative;
-  background: white;
-  height: 126px;
-  overflow: hidden;
-
-.success {
-  color: green !important;
-  height: 100%;
-  font-size: 16px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.error {
-  color: red;
-  margin: -20px 0 0 20px;
-}
-
-  .form {
-    height: 100%;
-    transition-duration: 0.4s;
-    overflow: hidden;
-  }
-
-  &.submitted {
-    .form {
-      height: 0%;
-    }
-  }
-}
-
 .container {
   max-width: 700px;
-  margin: 0 auto;
+  margin: 80px auto 0 auto;
   padding-bottom: 100px;
+  transition-duration: 0.4s;
+  opacity: 0;
+  // height: 0;
+
+  &.active {
+    opacity: 1;
+    height: auto;
+  }
 
   input {
     max-width: 100%;
   }
 
-  &.compact {
+  &.sidebar {
     h3 {
       font-size: 1.6rem;
       display: none;
@@ -54,10 +27,18 @@
       font-size: 1.2rem;
       color: rgba(0, 0, 0, 0.6);
       margin-bottom: 10px;
+
     }
 
     .description {
       margin-bottom: 10px;
+    }
+  }
+
+  .descriptionText {
+    h3 {
+      margin: 0 0 5px 0;
+      padding: 0;
     }
   }
 
@@ -82,40 +63,88 @@
     text-align: left;
     clear: none;
   }
-}
 
-.description {
-  display: flex;
-  margin-bottom: 40px;
-  align-items: flex-start;
+  .formContainer {
+    transition-duration: 2s;
+    position: relative;
+    background: white;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+    border-radius: 4px;
 
-  @media screen and (max-width: $tablet) {
+    // height: 126px;
+    overflow: hidden;
+
+    .success {
+      color: green !important;
+      height: 100%;
+      font-size: 16px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+    }
+
+    .form {
+      height: 100%;
+      transition-duration: 0.4s;
+      overflow: hidden;
+    }
+
+    &.submitted {
+      .form {
+        height: 0%;
+      }
+    }
+  }
+
+  &.sidebar {
+    input {
+      font-size: 1.4rem;
+
+      &[type="submit"] {
+        padding: 0px;
+        width: 95px;
+        border: none !important;
+        border-left: 1px solid rgba(0, 0, 0, 0.3) !important;
+      }
+    }
+  }
+
+  .description {
+    display: flex;
+    margin-bottom: 40px;
+    align-items: flex-start;
+
+    @media screen and (max-width: $tablet) {
+      flex-direction: column;
+      margin: 20px;
+    }
+
+    img {
+      $SIZE: 70px;
+
+      min-width: $SIZE;
+      min-height: $SIZE;
+      width: $SIZE;
+      height: $SIZE;
+      border-radius: $SIZE;
+      margin-right: 20px;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+    }
+  }
+
+  .content {
+    display: flex;
     flex-direction: column;
-    margin: 20px;
-  }
 
-  img {
-    $SIZE: 70px;
+    p {
+      margin-bottom: 20px;
 
-    min-width: $SIZE;
-    min-height: $SIZE;
-    width: $SIZE;
-    height: $SIZE;
-    border-radius: $SIZE;
-    margin-right: 20px;
-    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
-  }
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-
-  p {
-    margin-bottom: 20px;
-
-    &:last-child {
-      margin-bottom: 0;
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
+
+
