--- a/layouts/404.html
+++ b/layouts/404.html
@@ -10,7 +10,7 @@
 <main id="main" class="list">
   <h1>404</h1>
   <p>This page could not be found. Such sadness.</p>
-  <img src="/images/gorilla.png" />
+  <img src="/images/gorilla.jpg" />
 
 <div class="line"></div>
   </main>
