--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -22,13 +22,16 @@
     {{ partial "newsletter.html" . }}
       </div>
       <script>
-        let icon = '<i data-feather="link"></i>';
-let headings = document.getElementsByTagName('h2');
-for (let i = 0; i < headings.length; i++) {
-  let id = headings[i].id;
-  let iconLink = '<a class="header-icon-link" href="#' + id + '">' + icon + '</a> ';
-  let headingWithIconLink = iconLink + headings[i].innerHTML;
-  headings[i].innerHTML = headingWithIconLink;
-}
+        const icon = '<i data-feather="link"></i>';
+        const addHeadings = headings => {
+          for (let i = 0; i < headings.length; i++) {
+            const heading = headings[i];
+            const iconLink = `<a class="header-icon-link" href="#${heading.id}">${icon}</a>`;
+            heading.innerHTML = `${iconLink}${heading.innerHTML}`;
+          }
+        };
+        addHeadings(document.getElementsByTagName('h2'));
+        addHeadings(document.getElementsByTagName('h3'));
+        addHeadings(document.getElementsByTagName('h4'));
       </script>
 {{ end }}
