--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -39,4 +39,11 @@
   <link rel="stylesheet" href="{{ "css/prism-okaidia.css" | absURL }}" media="none" onload="this.media='all';">
 
 
+
+  {{ $featherJs := resources.Get "js/feather.js" | fingerprint }}
+<script src="{{ $featherJs.Permalink }}"></script>
+
+<script>
+  feather.replace()
+</script>
 </head>
